# pyisis

./: .env  .gitignore  CMakeLists.txt  COMPREHENSIVE_BINDING_ANALYSIS.md  DEBUG_FINDINGS.md  FIXES_APPLIED.md  GITHUB_RULES.md  Github_actions_build_test_steps.md  ISIS_PYBIND_IMPLEMENTATION_PLAN.md  LICENSE  MEMORY_MANAGEMENT_FIXES.md  Pybind_plan2_20260409.md  README.md  README.zh-CN.md  RELEASE.md  UNIT_TEST_FAILURE_ANALYSIS.md  environment.yml  git-to-github.txt  left_dom.cub  next_bindable_classes_analysis.md  packaging.md  print.prt  pybind_progress_log.md  pybind_rollout_classes_20260409.md  pyisis-发布前检查清单.md  pyisis-开发测试指标原则.md  right_dom.cub  sync_csvs.py  testing.md  todo_pybind11.csv
.github/: CODEOWNERS  CUSTOMIZATION_GUIDE.md  README.md  copilot-instructions.md  labels-pybind.md  pull_request_template.md  runner-config.yml
.github/ISSUE_TEMPLATE/: config.yml  pybind-task.yml
.github/conda/: pybind-ci-environment.yml
.github/instructions/: isis-cpp-naming.instructions.md  isis-cube-batch-operations.instructions.md  pybind-conda-api-precedence.instructions.md  pybind-cpp-metadata.instructions.md  pybind-file-header.instructions.md  pybind-metadata-common.instructions.md  pybind-python-test-metadata.instructions.md  pybind-testing.instructions.md  pybind-upstream-source-reading.instructions.md  python-example-cli-naming.instructions.md  reference-data-layout.instructions.md
.github/prompts/: build_commands.md  run-pyisis-build.prompt.md  stats-pyisis-codebase.prompt.md  sync-pybind-ledgers.prompt.md
.github/workflows/: README.md  agent-pybind-pr-gate.yml  agent-pybind-task-draft.yml  agent-pybind-task.yml  autofill-pybind-task-issue.yml  bridge-pybind-issue-to-pr.yml  ci-pybind.yml  dispatch-pybind-task-from-issue.yml  reusable-pybind-build-github-hosted.yml  reusable-pybind-build-self-hosted.yml  reusable-pybind-build.yml  reusable-runner-config.yml  runner-host-sanity-check.yml
build_agent79/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_conda/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
class_bind_methods_details/: apollo_apollo_metric_camera_methods.csv  apollo_apollo_metric_distortion_map_methods.csv  apollo_apollo_panoramic_camera_methods.csv  apollo_apollo_panoramic_detector_map_methods.csv  base_adaptive_gruen_methods.csv  base_affine_methods.csv  base_albedo_atm_methods.csv  base_alpha_cube_methods.csv  base_angle_methods.csv  base_anisotropic1_methods.csv  base_anisotropic2_methods.csv  base_area3_d_methods.csv  base_atmos_model_factory_methods.csv  base_atmos_model_methods.csv  base_auto_reg_factory_methods.csv  base_auto_reg_methods.csv  base_average_methods.csv  base_band_manager_methods.csv  base_basis1_variable_function_methods.csv  base_basis_function_methods.csv  base_blob_methods.csv  base_blobber_methods.csv  base_boxcar_manager_methods.csv  base_brick_methods.csv  base_buffer_manager_methods.csv  base_buffer_methods.csv  base_calculator_methods.csv  base_camera_detector_map_methods.csv  base_camera_distortion_map_methods.csv  base_camera_factory_methods.csv  base_camera_focal_plane_map_methods.csv  base_camera_ground_map_methods.csv  base_camera_methods.csv  base_camera_point_info_methods.csv  base_camera_sky_map_methods.csv  base_camera_statistics_methods.csv  base_centroid_methods.csv  base_chip_methods.csv  base_collector_map_methods.csv  base_column_methods.csv  (+362 more)
development_process/: NOTES.txt  context_window_change.txt  handoff_template.md  pyisis-开发测试指标原则.txt
doc_pybind11_learning/: lambda-包装.ｔｘｔ  pybind11-QString字符串涉及转换说明.txt  pybind11_notes.txt  pybind11_处理优先级原则.txt  pybind_file_header_template.md  编码快捷指南.txt
docs_isis_developer/: _a_priori_latitude_filter_8cpp.html  _a_priori_latitude_filter_8h.html  _a_priori_latitude_filter_8h_source.html  _a_priori_latitude_sigma_filter_8cpp.html  _a_priori_latitude_sigma_filter_8h.html  _a_priori_latitude_sigma_filter_8h_source.html  _a_priori_longitude_filter_8cpp.html  _a_priori_longitude_filter_8h.html  _a_priori_longitude_filter_8h_source.html  _a_priori_longitude_sigma_filter_8cpp.html  _a_priori_longitude_sigma_filter_8h.html  _a_priori_longitude_sigma_filter_8h_source.html  _a_priori_radius_filter_8cpp.html  _a_priori_radius_filter_8h.html  _a_priori_radius_filter_8h_source.html  _a_priori_radius_sigma_filter_8cpp.html  _a_priori_radius_sigma_filter_8h.html  _a_priori_radius_sigma_filter_8h_source.html  _a_priori_x_filter_8cpp.html  _a_priori_x_filter_8h.html  _a_priori_x_filter_8h_source.html  _a_priori_x_sigma_filter_8cpp.html  _a_priori_x_sigma_filter_8h.html  _a_priori_x_sigma_filter_8h_source.html  _a_priori_y_filter_8cpp.html  _a_priori_y_filter_8h.html  _a_priori_y_filter_8h_source.html  _a_priori_y_sigma_filter_8cpp.html  _a_priori_y_sigma_filter_8h.html  _a_priori_y_sigma_filter_8h_source.html  _a_priori_z_filter_8cpp.html  _a_priori_z_filter_8h.html  _a_priori_z_filter_8h_source.html  _a_priori_z_sigma_filter_8cpp.html  _a_priori_z_sigma_filter_8h.html  _a_priori_z_sigma_filter_8h_source.html  _abstract_filter_8cpp.html  _abstract_filter_8h.html  _abstract_filter_8h_source.html  _abstract_filter_selector_8cpp.html  (+10852 more)
examples/controlnet_construct/: CONTROLNET_Step1_LRONAC_spiceinit_cal_echo_batch.sh  __init__.py  batch_summary.py  controlnet_config.example.json  controlnet_config.low_memory_lro.json  controlnet_merge.py  controlnet_stereopair.py  coordinate_conventions.md  coordinate_metadata.py  dom2ori.py  dom_prepare.py  image_match.py  image_overlap.py  keypoints.py  keypoints_io.py  listing.py  lowres_offset.py  match_visualization.py  merge.py  (+18 more)
reference/: README.md
scripts/: build_log_analyzer.py  build_test_smoke.sh  controlnet_construct_e2e_unit_test_output.sh  release_helper.sh  stats_pyisis_codebase.py
src/: bind_camera.cpp  bind_camera_factory.cpp  bind_camera_hierarchy.cpp  bind_camera_maps.cpp  bind_cube.cpp  bind_high_level_cube_io.cpp  bind_low_level_cube_io.cpp  bind_mro_hical.cpp  bind_sensor.cpp  bind_spice_navigation.cpp  bind_statistics.cpp  helpers.h  module.cpp
tests/: smoke_import.py
(+322 files in other folders)
